--- a/ShopApp/static/ShopApp/css/base.css
+++ b/ShopApp/static/ShopApp/css/base.css
@@ -1,5 +1,5 @@
         .bg-prime {
-            background: linear-gradient(#0F2027, #203A43, #2C5364);
+            background: linear-gradient(#243B55, #243B55);
         }
         
         .main {
@@ -24,7 +24,7 @@
         }
         
         .category {
-            background: rgb(40, 71, 80);
+            background: #243B55;
             padding: 20px 20px 20px 10px;
             color: white;
             border-radius: 0px 0px 3px 0px;
@@ -41,7 +41,7 @@
             background: rgba(0, 0, 0, 0.39);
             width: 102%;
             height: 100%;
-            border: 2px solid grey;
+            border: 2px solid rgb(19, 18, 18);
         }
         
         #category-button a {
@@ -71,7 +71,6 @@
         .card-title a {
             color: black;
             font-weight: 300px;
-            ;
         }
         
         .grad {
@@ -102,7 +101,7 @@
         }
         
         .pagination li {
-            background: #203A43;
+            background: #243B55;
             color: rgb(143, 255, 51);
             font-size: 20px;
             padding-top: 4px;
