--- a/ShopApp/templates/ShopApp/base.html
+++ b/ShopApp/templates/ShopApp/base.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="{% static "ShopApp/css/base.css" %}">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     
-    <title>{% block title %}Just Clothes{% endblock %}</title>
+    <title>{% block title %}Footpath{% endblock %}</title>
 
     <!-- Bootstrap core CSS -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -28,12 +28,12 @@
 
   </head>
 
-  <body class="main">
+  <body class="main" >
     
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top bg-prime" id="header">
       <div class="container">
-        <a class="navbar-brand" href="/">JustClothes</a>
+        <a class="navbar-brand" href="/">Footpath</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
