--- a/ShopApp/templates/ShopApp/index.html
+++ b/ShopApp/templates/ShopApp/index.html
@@ -1,5 +1,6 @@
 {% extends "ShopApp/base.html" %}
 {% load static %}
+{% load custom_actions %}
 {% block title %}eCommerce Home Page{% endblock %}
 
 {% block userstyle %}
@@ -36,6 +37,7 @@
     </div>
   </div>
 
+
 {% if Ad.has_other_pages %}
   <ul class="pagination">
     {% if Ad.has_previous %}
@@ -67,12 +69,14 @@
    <div id="carouselExampleIndicators" class="carousel slide my-4 px-0" data-ride="carousel">
             
             <div class="carousel-inner" role="listbox">
+            {% define "false" as first_caruse %}
               {% for image in frontal_images %}
               
-                {% if image.pk == 1 %}
+                {% if first_caruse == "false" %}
               <div class="carousel-item active">
                 <img class="d-block img-fluid" src="{{ image.frontal_image.url }}" alt="Image">
               </div>
+                {% define "true" as first_caruse %}
                 {% else %}
                   <div class="carousel-item">
                     <img class="d-block img-fluid" src="{{ image.frontal_image.url }}" alt="Image" >
